2010-09-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/misc.c (asprintf): Use vsnprintf instead of
	vsprintf.

2010-09-20  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/commands/efi/lsefimmap.c: Correct header.
	* NEWS: Update.

2010-09-20  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-editenv.c (argp_parser): Don't pass translated strings
	as printf format strings; the translations might contain '%' which
	could cause a crash.
	(main): Likewise.
	* util/grub-fstest.c (argp_parser): Likewise.
	* util/grub-setup.c (argp_parser): Likewise.
	(main): Likewise.

2010-09-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Use argp in grub-fstest.

	* util/grub-fstest.c: Don't include getopt.h.
	Include argp.h.
	(root): New variable.
	(args_count): Likewise.
	(nparm): Likewise.
	(num_disks): Likewise.
	(images): Likewise.
	(cmd): Likewise.
	(debug_str): Likewise.
	(args): Likewise.
	(options): Transformed to argp.
	(usage): Removed.
	(main): Split argument parsing into ...
	(argp_parser): ... this. Changed to argp format.
	(argp): New variable.
	(main): Use argp_parse.

2010-09-20  Tristan Gingold  <gingold@free.fr>
2010-09-20  Robert Millan  <rmh.grub@aybabtu.com>
2010-09-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/efi/lsefimmap.c: New file.
	* grub-core/Makefile.core.def (lsefimmap): New module.
	* include/grub/efi/api.h (PRIxGRUB_EFI_UINTN_T): New definition.

2010-09-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Pause the execution (10s max) if any errors are displayed so the user
	has a chance to see them.

	* grub-core/kern/err.c (grub_err_printed_errors): New variable.
	(grub_print_error): Increment grub_err_printed_errors.
	* grub-core/normal/menu.c (grub_menu_execute_entry): Pause the
	execution if any errors were displayed.
	(show_menu): Remove old code for pause.
	* grub-core/normal/menu_entry.c (run): Likewise.
	* grub-core/normal/term.c (grub_normal_char_counter): Removed. All
	users updated.