@@ -849,10 +849,12 @@ main (int argc, char *argv[])
   grub_init_all ();
 
   grub_lvm_fini ();
-  grub_mdraid_fini ();
+  grub_mdraid09_fini ();
+  grub_mdraid1x_fini ();
   grub_raid_fini ();
   grub_raid_init ();
-  grub_mdraid_init ();
+  grub_mdraid09_init ();
+  grub_mdraid1x_init ();
   grub_lvm_init ();
 
   dest_dev = get_device_name (arguments.device);
